--- a/trunk/PyChat 1.16/res/style/traytheme/msg/content.html
+++ b/trunk/PyChat 1.16/res/style/traytheme/msg/content.html
@@ -7,7 +7,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 </head>
 <body>
-  <img src="%avatar%" height="64" width="64" style="margin: 3px; float: left;" />
+  <!--<img src="%avatar%" height="64" width="64" style="margin: 3px; float: left;" />-->
   %message%
 </body>
 </html>
